fix: customize panel text-align: left

--- a/src/styles/renderCustomizePanel.scss
+++ b/src/styles/renderCustomizePanel.scss
@@ -8,6 +8,7 @@
     height: calc(100% - 32px);
     padding-bottom: 40px;
     overflow-y: auto;
+    text-align: left;
 
     ul {
       position: relative;
